infrastructure/staging/nginx/ingress-annotations.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller
  namespace: nginx
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: stjerne-staging-fdk-digdir-no-ssl-2
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller-v6
  namespace: nginx
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: stjerne-staging-fdk-digdir-no-ssl-2
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v6
