infrastructure/staging/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
    ingress.gcp.kubernetes.io/pre-shared-cert: stjerne-staging-fdk-digdir-no-ssl-2, stjerne-dev-fdk-digdir-no-ssl-1
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v4
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller-v6
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
    ingress.gcp.kubernetes.io/pre-shared-cert: stjerne-staging-fdk-digdir-no-ssl-2
    kubernetes.io/ingress.global-static-ip-name: digdir-fdk-dev-staging-subnet-v6
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
